/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.role;

import "doodle/design/role/role_struct.proto";
import "doodle/design/common/pagination.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.role";
option java_outer_classname = "RoleProfilePorto";

message RoleProfilePullRequest {
  string account_id = 1;
}

message RoleProfilePullReply {
  oneof Result {
    RoleErrorCode error = 1;
    RoleProfileInfoList payload = 2;
  }
}

message RoleProfileUploadRequest {
  RoleProfileInfo profile = 1;
}

message RoleProfileQueryRequest {
  string role_id = 1;
}

message RoleProfileQueryReply {
  oneof Result {
    RoleErrorCode error = 1;
    RoleProfileInfo payload = 2;
  }
}

message RoleProfilePageRequest {
  doodle.design.common.PageRequest page = 1;
}

message RoleProfilePageReply {
  oneof Result {
    RoleErrorCode error = 1;
    RoleProfileInfoList payload = 2;
  }
}
