/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.role;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.role";
option java_outer_classname = "RoleStructProto";

enum RoleErrorCode {
  FAILURE = 0;
}

message RoleProfileInfo {
  string account_id = 1;
  string role_id = 2;
  string role_name = 3;
  int32 role_level = 4;
  string server_id = 5;
  string server_name = 6;
}

message RoleProfileInfoList {
  repeated RoleProfileInfo role_profile = 1;
}

message RoleGMDuration {
  google.protobuf.Duration duration = 1;
}

message RoleGMLifecycle {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message RoleGMInfo {
  string cmd = 1;
  string reason = 2;
  oneof Kind {
    RoleGMDuration option = 3;
    RoleGMLifecycle lifecycle = 4;
  }
}

message RoleGMInfoList {
  repeated RoleGMInfo role_gm = 1;
}

message RoleDetailsInfo {
  RoleProfileInfo profile = 1;
  RoleGMInfoList gm = 2;
}

message RoleDetailsInfoList {
  repeated RoleDetailsInfo role = 1;
}
